# hse-python-backend

./: pyproject.toml
lecture_1/hw/: README.md  math_plain_asgi.py  pyproject.toml
lecture_2/hw/: README.md  pyproject.toml
lecture_2/hw/shop_api/: main.py
lecture_3/hw/: Dockerfile  Makefile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
lecture_3/hw/shop_api/: main.py
tests/lecture_4/hw/: README.md  test_api_users.py  test_api_utils.py  test_core_users.py  test_user_admin.py  test_user_registration.py
