[tool.poetry]
name = "homework1"
version = "0.1.0"
description = "Homework project for practice tasks."
authors = ["Chetevrgov Andrey"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.32.0"
httpx = "^0.27.2"
pytest = "^7.0"
fastapi = "^0.115.3"

[tool.poetry.group.dev.dependencies]
async-asgi-testclient = "^1.4.11"
pytest-asyncio = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
