[tool.poetry]
name = "hw2"
version = "0.1.0"
description = "homework2"
authors = ["Chetevrgov Andrey"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
pydantic = "^2.9.2"
pytest-asyncio = "^0.24.0"
async-asgi-testclient = "^1.4.11"
faker = "^30.8.1"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
