[tool.poetry]
name = "hw3"
version = "0.1.0"
description = "home work 2"
authors = ["Chetevrgov Andrey"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
pydantic = "^2.9.2"
pytest-asyncio = "^0.24.0"
async-asgi-testclient = "^1.4.11"
Faker = "^30.8.1"
httpx = "^0.27.2"
prometheus-fastapi-instrumentator = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
